# gogooku3

./: .bandit  .codex-env-info.md  .env  .env.example  .env.optuna  .env.optuna.example  .gitignore  .gitlint  .mcp.json  .pre-commit-config.yaml  .releaserc.json  =0.2.0  =0.3.14b0  =1.4.0  =1.5.8  A4_SAFE_IMPLEMENTATION_STATUS.md  A4_SAFE_VERSION_IMPLEMENTATION_COMPLETE.md  AGENTS.md  APEX_RANKER_CURRENT_STATUS_20251103_0859.md  APEX_RANKER_STATUS_REPORT_20251103.md  ATFT_MIGRATION_REPORT.md  ATFT_P0_PHASE2_COMPLETE.md  ATFT_P0_PHASE3_COMPLETE.md  ATFT‑GAT‑FAN_IMPL.md  AUTONOMOUS_HEALTH_IMPROVEMENTS_20251103_075128.md  CACHE_FIX_DOCUMENTATION.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CLAUDE.md.backup  CLEANUP_REPORT.md  CLEANUP_TASKS.json  CODEX_MCP.md  DATASET_GENERATION_GUIDE.md  DOCS_REORGANIZATION_COMPLETE.md  DOC_TASKS.json  EFFICIENCY_REPORT.md  EXPERIMENT_STATUS.md  FEATURE_COUNT_ANALYSIS.md  FEATURE_COUNT_FIX_COMPLETE.md  (+114 more)
apex-ranker/: GOAL.md  (+11 more)
gogooku5/common/: README.md  pyproject.toml
gogooku5/common/src/common/: __init__.py
gogooku5/data/: .env.example  ASOF_JOIN_IMPLEMENTATION_GUIDE.md  CLAUDE.md  CRITICAL_BUGS_CONFIRMED.md  DATASET_BUILD_DESIGN.md  Makefile  PHASE1_FIXES_SUMMARY.md  README.md  output  pyproject.toml  test_parallelization.py
gogooku5/data/configs/: dagster_missing_chunks.yaml  dagster_ten_year_build.yaml
gogooku5/data/docs/: OPTION1_COMPLETION_REPORT.md  dataset_quality_pipeline.md  feature_leak_check.md
gogooku5/data/output/: latest_columns.txt  ml_dataset_20200101_20250131_20251103_025511_full_metadata.json  ml_dataset_20240101_20240102_20251031_124647_full_metadata.json  ml_dataset_20240101_20240102_20251031_134453_full_metadata.json  ml_dataset_20240101_20240102_20251104_021251_full_metadata.json  ml_dataset_20240101_20240131_20251031_124649_full_metadata.json  ml_dataset_20240101_20240131_20251031_134416_full_metadata.json  ml_dataset_latest_full.validator_1to9.json  ml_dataset_latest_full_metadata.json  ml_dataset_latest_metadata.json
gogooku5/data/output/cache/: cache_index.json  calendar_2019-08-28_2020-01-02.arrow  calendar_2019-08-28_2020-01-05.arrow  earnings_2025-10-24_2025-10-31.arrow  futures_topix_2019-08-28_2025-10-31.arrow  index_option_raw_2025-10-24_2025-10-31.arrow  indices_0028,0029,002B,002D,0101,0500,0501,0502,8100,8101_2019-08-28_2025-10-31.arrow  indices_0101_2019-08-28_2025-10-31.arrow  margin_daily_2019-08-28_2025-10-31.arrow  margin_daily_2025-10-24_2025-10-31.arrow  margin_weekly_2025-10-24_2025-10-31.arrow  topix_2025-10-24_2025-10-31.arrow
gogooku5/data/schema/: feature_schema_manifest.json  feature_schema_summary.txt
gogooku5/data/scripts/: add_backtest_labels.py  add_graph_features_to_dataset.py  build.py  build_chunks.py  build_dim_security.py  build_optimized.py  compare_parity.py  gogooku5-dataset  validate_dependencies.py  warm_macro_cache.py
gogooku5/data/src/: __init__.py
gogooku5/data/src/builder/: __init__.py
gogooku5/data/src/cli/: __init__.py  args.py  config.py  main.py  plan.py  validators.py
gogooku5/data/src/dagster_gogooku5/: __init__.py  assets.py  defs.py  resources.py
gogooku5/data/tests/: __init__.py  helpers.py  validate_2025_complete.py  validate_2025_data_quality.py  validate_categorical_optimization.py  validate_phase1_data_quality.py  validate_sec_id_migration.py
gogooku5/data/tests/integration/: __init__.py  test_chunk_pipeline.py  test_pipeline_end_to_end.py
gogooku5/data/tests/unit/: __init__.py  test_advanced_features.py  test_advanced_fetcher.py  test_build_chunks_cli.py  test_cache_ipc.py  test_cache_manager.py  test_chunk_planner.py  test_cli_scripts.py  test_data_sources.py  test_dataset_builder.py  test_datetime_utils.py  test_dim_security.py  test_env_utils.py  test_flow_features.py  test_futures_topix.py  test_graph_features.py  test_index_features.py  test_jquants_async_fetcher.py  test_lazy_io.py  test_lazy_io_categorical.py  test_limit_session_features.py  test_macro_global_regime_features.py  test_margin_daily_features.py  test_merge_chunks.py  test_options_asof.py  test_parity.py  test_peer_features.py  test_prefetch.py  test_quality_features_polars.py  test_sector_aggregation.py  test_settings.py  test_short_positions_features.py  test_technical_features.py  test_validation_quality.py  test_volatility_features.py
gogooku5/data/tools/: add_basis_gate_full.py  add_beta_alpha_bd_features_full.py  add_graph_features_full.py  build_shares_master.py  build_static_graph.py  check_chunks.py  check_dataset_quality.py  clean_empty_cache.py  compare_null_rates.py  drop_all_null_columns.py  drop_high_null_columns.py  extract_date_range.py  lazy_dataset_utils.py  manage_raw_sources.py  materialize_asset.py  merge_apex_datasets.py  merge_chunks.py  raw_source_specs.py  regenerate_schema_manifest.py  verify_categorical_optimization.py
gogooku5/models/apex_ranker/: GOAL.md  Makefile.train  README.md  pyproject.toml
gogooku5/models/apex_ranker/configs/: feature_groups.yaml  v0_base.yaml  v0_pruned.yaml
gogooku5/models/apex_ranker/docs/: BACKTEST_COMPARISON_2023_2025.md  BACKTEST_SPECIFICATION.md  DEPLOYMENT_CHECKLIST.md  EXPERIMENT_STATUS.md  INFERENCE_GUIDE.md  PHASE3_SUMMARY_FOR_TEAM.md  PHASE4_3A_REGIME_TUNING_PLAN.md  PHASE4_3_2_COMPLETE_SUMMARY.md  PHASE4_TASK_LIST.md  PHASE_3_5_TEAM_SUMMARY.md  PHASE_4_2_IMPLEMENTATION_STATUS.md  PHASE_4_2_WALK_FORWARD_PLAN.md  REPRODUCIBILITY_VERIFICATION_REPORT.md  TASK_4_1_1_MONTHLY_REBALANCE.md  TRANSACTION_COST_MODEL.md  phase4.3.2_scale_detection_fix.md
gogooku5/models/apex_ranker/scripts/: _bootstrap.py  backtest_regime_adaptive.py  backtest_smoke_test.py  backtest_v0.py  backtest_with_regime.py  check_training_ready.py  compare_models.py  feature_importance_v0.py  inference_v0.py  monitor_predictions.py  run_rolling_retrain.py  run_walk_forward_backtest.py  run_walk_forward_regime.py  train_v0.py
gogooku5/models/apex_ranker/tests/: __init__.py  test_feature_selector.py
gogooku5/models/atft_gat_fan/: Makefile.train  README.md  pyproject.toml
gogooku5/models/atft_gat_fan/scripts/: train_atft.py
(+2111 files in other folders)
