[tool.poetry]
name = "gogooku3"
version = "0.1.0"
description = "Next-generation ML pipeline for Japanese stock market analysis"
authors = ["gogooku team"]
readme = "README.md"
packages = [{include = "batch"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.24.0"
aiohttp = "^3.9.0"
dagster = "^1.5.0"
dagster-webserver = "^1.5.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
pyarrow = "^15.0.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[tool.poetry.group.storage.dependencies]
minio = "^7.2.0"
s3fs = "^2024.0.0"
clickhouse-driver = "^0.2.6"

[tool.poetry.scripts]
pipeline = "scripts.run_pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=batch --cov-report=html --cov-report=term"
