[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogooku5-common"
version = "0.1.0"
description = "Shared utilities for gogooku5 packages"
readme = "README.md"
authors = [{ name = "gogooku5 Team" }]
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["common*"]
