[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogooku5-data-builder"
version = "0.1.0"
description = "Dataset generation package for the gogooku5 migration"
readme = "README.md"
authors = [{ name = "ATFT-GAT-FAN Migration Team" }]
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=12.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "aiohttp>=3.9.0",
    "nest_asyncio>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["builder*"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
addopts = "-ra --maxfail=1 --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]
