[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogooku5-apex-ranker"
version = "0.1.0"
description = "APEX-Ranker model package for gogooku5"
readme = "README.md"
authors = [{ name = "APEX-Ranker Migration Team" }]
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "torch>=2.2.0",
    "pytorch-lightning>=2.3.0",
    "pyyaml>=6.0.0",
    "pandas>=2.1.0",
    "mlflow>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["apex_ranker*"]

[tool.pytest.ini_options]
addopts = "-ra --maxfail=1"
testpaths = ["tests"]
