[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogooku5-apex-ranker"
version = "0.1.0"
description = "APEX-Ranker model package for gogooku5"
readme = "README.md"
authors = [{ name = "APEX-Ranker Migration Team" }]
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "torch>=2.2.0",
    "polars>=0.19.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "fastapi>=0.110.0",
    "prometheus-client>=0.18.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["apex_ranker*"]

[tool.pytest.ini_options]
addopts = "-ra --maxfail=1"
testpaths = ["tests"]
