[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogooku5-atft-gat-fan"
version = "0.1.0"
description = "ATFT-GAT-FAN model package for gogooku5"
readme = "README.md"
authors = [{ name = "ATFT-GAT-FAN Migration Team" }]
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "torch>=2.2.0",
    "pytorch-lightning>=2.3.0",
    "pyyaml>=6.0.0",
    "polars>=0.20.0",
    "mlflow>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["atft_gat_fan*"]

[tool.pytest.ini_options]
addopts = "-ra --maxfail=1"
testpaths = ["tests"]
